Clarify and correct the server README
Refine the explanations for developer clarity and correct the record field name
to envelope (matching the persistence model and migrations), align the recovery
credential wording (the server stores only a hash of the credential), and note
that the vault-key id is an opaque, client-convention identifier.

Co-Authored-By: Claude <noreply@anthropic.com>